Correct behavior on Firefox.

--- a/sass/partials/_generator.scss
+++ b/sass/partials/_generator.scss
@@ -33,9 +33,6 @@ nav {
         font-family: "Phenomena";
         justify-content: space-around;
         margin-top: 15px;
-        @media screen and (min-width: 720px) {
-            margin-top: 2.5%;
-        }
         li {
             color: #fff;
             list-style-type: none;
